added basic skeleton about us page.

--- a/src/MandevilleCnc.Web/Views/Home/Index.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
     ViewData["Title"] = "Home";
 }
 
-<section class="mdv-page-header">
+<section class="mdv-page-header mdv-landing-page-header">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1 class="title">Quality. Excellence. Service.</h1>
+                <h1>Quality. Excellence. Service.</h1>
                 <h4>Here at Mandeville CNC Routing, you can expect the best. Our team have years of hard earned experience in wood based manufacturing which ensures you receive a high quality service at a competitive price.</h4>
                 <br>
                 <a href="javascript:void(0)" class="btn btn-raised btn-lg btn-success">Get a Quote</a>
@@ -15,7 +15,7 @@
     </div>
 </section>
 
-<section class="mdv-page-content">
+<section class="mdv-page-content mdv-landing-page-content">
     <div class="container-fluid">
         <div class="well">
             <div class="row">
