--- a/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
+++ b/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <div class="navbar-collapse collapse navbar-inverse-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="@Url.Action("AboutUs", "Home")">
                                 <i class="material-icons">group</i> About Us
                             </a>
                         </li>
@@ -63,7 +63,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="javascript:void(0)">About Us</a></li>
+                    <li><a href="@Url.Action("AboutUs", "Home")">About Us</a></li>
                     <li><a href="javascript:void(0)">Get a Quote</a></li>
                     <li><a href="javascript:void(0)">Contact</a></li>
                 </ul>
