--- a/src/MandevilleCnc.Web/wwwroot/css/site.css
+++ b/src/MandevilleCnc.Web/wwwroot/css/site.css
@@ -1,7 +1,17 @@
 ﻿/***************************** Master Tags *********************************/
-h2, h3, h4, h5 {
+h1, h2, h3, h4, h5 {
     font-family: "Roboto Slab";
-    font-weight: bold;
+    font-weight: 700;
+}
+
+h1 {
+    text-align: center;
+}
+
+h4.sub-title {
+    text-align: center;
+    font-family: "Roboto";
+    font-weight: 300;
 }
 
 /************************* Bootstrap Overrides *****************************/
@@ -72,13 +82,23 @@ nav.navbar {
     padding-top: 150px;
     color: #fff;
 }
+
+.mdv-landing-page-header h1 {
+    text-align: left;
+    font-weight: 300;
+    font-family: "Roboto";
+}
 /*****************************************************/
 
 /* Page Content **************************************/
 .mdv-page-content {
-    margin-top: -90px;
+    margin-top: -250px;
     z-index: 999;
     position: relative;
+}
+
+.mdv-landing-page-content {
+    margin-top: -90px;
 }
 
 .mdv-page-content .well {
