--- a/src/MandevilleCnc.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/AboutUs.cshtml
@@ -18,38 +18,137 @@
         <div class="well">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="text-center">Introducing Mandeville CNC</h2>
                     <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="text-center">Introducing Mandeville CNC</h2>
+                    <h2 class="text-center">Our History</h2>
                     <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-1.jpg")">
+                </div>
+                <div class="col-sm-4">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-2.jpg")">
+                </div>
+                <div class="col-sm-4">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-3.jpg")">
+                </div>
+                <div class="col-sm-6">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-4.jpg")">
+                </div>
+                <div class="col-sm-6">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-5.jpg")">
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="text-center">Introducing Mandeville CNC</h2>
+                    <h2 class="text-center">Our Values</h2>
+                    <p class="text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mdv-info-block">
+                        <i class="material-icons icon-success">beenhere</i>
+                        <h4>Quality</h4>
+                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="mdv-info-block">
+                        <i class="material-icons icon-warning">star</i>
+                        <h4>Excellence</h4>
+                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="mdv-info-block">
+                        <i class="material-icons icon-info">sentiment_very_satisfied</i>
+                        <h4>Service</h4>
+                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                    <h2 class="text-center">Our Team</h2>
                     <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
                 </div>
             </div>
+
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="text-center">Introducing Mandeville CNC</h2>
-                    <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                <div class="col-sm-6 col-md-3">
+                    <div class="mdv-card">
+                        <div class="mdv-card-avatar">
+                            <img class="img" src="@Url.Content("~/images/aboutus-avatar-1.jpg")">
+                        </div>
+
+                        <div class="mdv-card-content">
+                            <h4>Charlie</h4>
+                            <h6 class="category text-muted">CEO / Co-Founder</h6>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="mdv-card">
+                        <div class="mdv-card-avatar">
+                            <img class="img" src="@Url.Content("~/images/aboutus-avatar-4.jpg")">
+                        </div>
+
+                        <div class="mdv-card-content">
+                            <h4>Peter</h4>
+                            <h6 class="category text-muted">CEO / Co-Founder</h6>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="mdv-card">
+                        <div class="mdv-card-avatar">
+                            <img class="img" src="@Url.Content("~/images/aboutus-avatar-2.jpg")">
+                        </div>
+
+                        <div class="mdv-card-content">
+                            <h4>Duncan</h4>
+                            <h6 class="category text-muted">Senior Wood Specialist</h6>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="mdv-card">
+                        <div class="mdv-card-avatar">
+                            <img class="img" src="@Url.Content("~/images/aboutus-avatar-3.jpg")">
+                        </div>
+
+                        <div class="mdv-card-content">
+                            <h4>Alex</h4>
+                            <h6 class="category text-muted">Client Relationship Manager</h6>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="text-center">Introducing Mandeville CNC</h2>
-                    <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="text-center">Introducing Mandeville CNC</h2>
-                    <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <h2 class="text-center">Work with Us</h2>
+
+                    <div class="row">
+                        @Html.Partial("_BasicContactForm", new BasicMessageModel())
+                    </div>
                 </div>
             </div>
         </div>
