finished contact page and added recaptcha.

--- a/src/MandevilleCnc.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/AboutUs.cshtml
@@ -18,7 +18,7 @@
         <div class="well">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <p class="lead text-center mdv-paragraph-header">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
                 </div>
             </div>
 
@@ -147,7 +147,7 @@
                     <h2 class="text-center">Work with Us</h2>
 
                     <div class="row">
-                        @Html.Partial("_BasicContactForm", new BasicMessageModel())
+                        @Html.Partial("_ContactForm", new MessageModel())
                     </div>
                 </div>
             </div>
