added async submission to forms.

--- a/src/MandevilleCnc.Web/Views/Shared/_ContactForm.cshtml
+++ b/src/MandevilleCnc.Web/Views/Shared/_ContactForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MessageModel
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("SendMessage", "Home"))
 {
     <div class="col-md-6">
         <div class="form-group label-floating">
