--- a/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
+++ b/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
@@ -74,6 +74,24 @@
         </div>
     </footer>
 
+    @* Modal *@
+    <div class="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Modal Body</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-raised btn-primary btn-block-xs" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     @* Scripts *@
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="@Url.Content("~/lib/jquery/dist/jquery.js")"></script>
