lots of seo based changes.

--- a/src/MandevilleCnc.Web/Views/Home/Contact.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/Contact.cshtml
@@ -1,5 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Contact";
+    ViewData["Description"] = "This page provides you with all the different ways you can get in touch with us. We'd love to hear from you.";
+    ViewData["Keywords"] = "CNC Routing, CNC ROuting Services, Joinery, Joinery Services, Dorset Routing, UK Routing, CNC Routing Contact, Joinery Contact, Mandeville Contact";
+    ViewData["CanonicalUrl"] = Url.Action("Contact", "Home");
 }
 
 <section class="mdv-page-header">
@@ -7,7 +10,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h1>Contact.</h1>
-                <h4 class="sub-title">You can find all our contact details below. We'd love to hear from you.</h4>
+                <h4>Please find all the different ways you can get in touch below. We'd love to hear from you.</h4>
             </div>
         </div>
     </div>
@@ -17,18 +20,10 @@
     <div class="container-fluid">
         <div class="well">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <div class="row">
                         <div class="col-xs-12">
                             <h2>Address</h2>
-                            <p>Mandeville CNC Routing is a subsidary of Mandeville Joinery Co.</p>
-                            <p>
-                                <strong>
-                                    tel: 01935 83861<br />
-                                    mob: 07974 793588<br />
-                                    email: info@mandevillejoinery.com
-                                </strong>
-                            </p>
                             <p>
                                 Unit 4 Townsend Buildings,<br />
                                 Melbury Osmond,<br />
@@ -36,18 +31,25 @@
                                 UK,<br />
                                 DT2 0LP
                             </p>
+                            <p>
+                                <strong>
+                                    tel: 01935 83861<br />
+                                    mob: 07974 793588<br />
+                                    email: <a href="mailto:info@mandevillejoinery.com">info@mandevillejoinery.com</a>
+                                </strong>
+                            </p>
                             <div class="clearfix"></div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <iframe class="mdv-map" width="100%" height="450" frameborder="0" style="border:0"
+                            <iframe class="mdv-map" width="100%" height="350" frameborder="0" style="border:0"
                                     src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDHBx9zJk3cvUALtGmgD0hyezU3eawQj_c&q=Mandeville%20Joinery,DT2%200LP"></iframe>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h2>Contact Form</h2>
+                <div class="col-sm-6">
+                    <h2>Send Us a Message</h2>
                     <div class="row">
                         @Html.Partial("_ContactForm", new MessageModel())
                     </div>
