--- a/src/MandevilleCnc.Web/Views/Home/Index.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/Index.cshtml
@@ -1,13 +1,19 @@
 ﻿@{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Welcome to the home of Mandeville CNC Routing.";
+    ViewData["Description"] = "We are Mandeville CNC Routing. We provide CNC routing services for any project, large or small, from design to delivery or anywhere inbetween. Whatever your concept, Mandeville can meet your needs.";
+    ViewData["Keywords"] = "CNC Routing, CNC ROuting Services, Joinery, Joinery Services, Dorset Routing, UK Routing";
+    ViewData["CanonicalUrl"] = Url.Action("Index", "Home");
 }
 
 <section class="mdv-page-header mdv-landing-page-header">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1>Quality. Excellence. Service.</h1>
-                <h4>Here at Mandeville CNC Routing, you can expect the best. Our team have years of hard earned experience in wood based manufacturing which ensures you receive a high quality service at a competitive price.</h4>
+                <span class="mdv-landing-page-title">Quality. Excellence. Service.</span>
+                <h4>
+                    Here at Mandeville CNC Routing, you can expect the best. Our team have years of hard earned experience in 
+                    wood based manufacturing which ensures you receive a high quality service at a competitive price.
+                </h4>
                 <br>
                 <a href="@Url.Action("GetAQuote", "Home")" class="btn btn-raised btn-lg btn-success">Get a Quote</a>
             </div>
@@ -20,40 +26,51 @@
         <div class="well">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="text-center">Introducing Mandeville CNC</h2>
-                    <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <h1 class="text-center">Welcome to Mandeville CNC Routing</h1>
+                    <p class="lead text-center mdv-paragraph-header">
+                        We are Mandeville CNC Routing. We provide CNC routing services for any project, large or small, from design 
+                        to delivery or anywhere inbetween. Whatever your concept, Mandeville can meet your needs.
+                    </p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Our Values</h2>
-                    <p class="text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <p class="text-center">
+                        We pride ourselves on our sustainable values, using local materials where possible. We balance traditional 
+                        techniques with modern design and are highly regarded by our past customers. We offer a professional service 
+                        with a personal touch and can assist with all stages of the project lifecycle; from idea, to design, to 
+                        manufacture and installation.
+                    </p>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="mdv-info-block">
                         <i class="material-icons icon-success">beenhere</i>
                         <h4>Quality</h4>
-                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="mdv-info-block">
-                        <i class="material-icons icon-warning">star</i>
-                        <h4>Excellence</h4>
-                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                        <i class="material-icons icon-warning">public</i>
+                        <h4>Sustainability</h4>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="mdv-info-block">
                         <i class="material-icons icon-info">sentiment_very_satisfied</i>
                         <h4>Service</h4>
-                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                    </div>
+                </div>
+
+                <div class="col-xs-12">
+                    <div class="mdv-info-block">
+                        <a href="@Url.Action("AboutUs", "Home")" class="btn btn-raised btn-lg btn-success">Read More</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +78,10 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Get in Touch</h2>
-                    <p class="text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <p class="text-center">
+                        Contact us today for a free no obligation quote. We will offer a genuine opinion on the needs of your project 
+                        and will offer help and advice whether we undertake work for you or not.
+                    </p>
 
                     <div class="row">
                         @Html.Partial("_ContactForm", new MessageModel())
