--- a/src/MandevilleCnc.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/AboutUs.cshtml
@@ -1,5 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "About Us";
+    ViewData["Description"] = "Find out a little more about our history, our values and our skilled team of wood enthusiasts.";
+    ViewData["Keywords"] = "CNC Routing, CNC ROuting Services, Joinery, Joinery Services, Dorset Routing, UK Routing, About, About Mandeville, About Mandeville Joinery, Mandeville Joinery History, Values";
+    ViewData["CanonicalUrl"] = Url.Action("AboutUs", "Home");
 }
 
 <section class="mdv-page-header">
@@ -7,7 +10,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h1>About Us.</h1>
-                <h4 class="sub-title">Find out a little more about our history, our values and our skilled team of wood enthusiasts.</h4>
+                <h4>Find out a little more about our history, our values and our skilled team of wood enthusiasts.</h4>
             </div>
         </div>
     </div>
@@ -18,64 +21,87 @@
         <div class="well">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <p class="lead text-center mdv-paragraph-header">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <p class="lead text-center mdv-paragraph-header">
+                        Our passion is creating well crafted timber products that we know will be around for years to come. Whether we're
+                        working with private clients, architects or contractors, the service is the same. We will deal with each job, small or
+                        large in a personal yet professional fashion.
+                    </p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Our History</h2>
-                    <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <p class="text-center">
+                        Established in 1999 Mandeville joinery has produced fine furniture, architectural joinery and undertaken
+                        restoration projects, we have always prided ourselves on balancing traditional techniques with modern design.
+                        From timber frame construction to designing and making contemporary furniture, Mandeville joinery has the skills
+                        and resources to see your project from idea, through design to manufacture and installation.
+                    </p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-1.jpg")">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-1.jpg")" alt="An image cnc routing in our workshop">
                 </div>
                 <div class="col-sm-4">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-2.jpg")">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-2.jpg")" alt="An image cnc routing in our workshop">
                 </div>
                 <div class="col-sm-4">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-3.jpg")">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-3.jpg")" alt="An image cnc routing in our workshop">
                 </div>
                 <div class="col-sm-6">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-4.jpg")">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-4.jpg")" alt="An image cnc routing in our workshop">
                 </div>
                 <div class="col-sm-6">
-                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-5.jpg")">
+                    <img class="img-rounded img-responsive mdv-img-raised" src="@Url.Content("~/images/aboutus-img-5.jpg")" alt="An image cnc routing in our workshop">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Our Values</h2>
-                    <p class="text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <p class="text-center">
+                        We are committed to offering an environmentaly responsible service using sustainable resources from local suppliers 
+                        where possible. Almost all of our materials are FSC certified, ensuring they come from a responsibly managed source. 
+                        We are doing our best to ensure our products are not only easy on the eye but kind to nature. We take our green 
+                        credentials very seriously and have setup various waste management initiatives such as recycling and distributing 
+                        our surplus materials to other local businesses.
+                    </p>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="mdv-info-block">
                         <i class="material-icons icon-success">beenhere</i>
                         <h4>Quality</h4>
-                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                        <p>
+                            We believe quality and excellence start from the ground up and it is ingrained in the mindset of our business.
+                            All of our working practices are subject to strict quality controls and we are proud of our craftmanship.
+                        </p>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="mdv-info-block">
-                        <i class="material-icons icon-warning">star</i>
-                        <h4>Excellence</h4>
-                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                        <i class="material-icons icon-warning">public</i>
+                        <h4>Sustainability</h4>
+                        <p>
+                            We always intend to source our materials in a sustainable way and where possible we use local suppliers.
+                        </p>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="mdv-info-block">
                         <i class="material-icons icon-info">sentiment_very_satisfied</i>
                         <h4>Service</h4>
-                        <p>Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro.</p>
+                        <p>
+                            Mandeville is highly regarded by its customers and peers and we believe that is in part down to our
+                            unique, professional yet personal service. We will not rest until our customer is entirely satisfied.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -83,7 +109,11 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <h2 class="text-center">Our Team</h2>
-                    <p class="lead text-center">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum. Mei ei atomorum consulatu adversarium, id fugit eligendi molestie pro, mel ea dicam ubique. Cu pro ocurreret dissentias, ne ius assum quidam delicatissimi.</p>
+                    <p class="text-center">
+                        We like to think of ourselves as a little different to your average business in our sector which is driven 
+                        by our unique team of forward thinking, like minded individuals who work to the same high standards and 
+                        share a common love of all things wood.
+                    </p>
                 </div>
             </div>
 
@@ -97,7 +127,7 @@
                         <div class="mdv-card-content">
                             <h4>Charlie</h4>
                             <h6 class="category text-muted">CEO / Co-Founder</h6>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                            <p class="text-muted">Our workshop captain, who will not rest until quality and craftmanship prevails.</p>
                         </div>
                     </div>
                 </div>
@@ -110,7 +140,7 @@
                         <div class="mdv-card-content">
                             <h4>Peter</h4>
                             <h6 class="category text-muted">CEO / Co-Founder</h6>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                            <p class="text-muted">Plotting, planning, brains and vision, Peter is the driving force behind our business.</p>
                         </div>
                     </div>
                 </div>
@@ -123,7 +153,7 @@
                         <div class="mdv-card-content">
                             <h4>Duncan</h4>
                             <h6 class="category text-muted">Senior Wood Specialist</h6>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                            <p class="text-muted">Turning designs into beautiful, knotted, well-oiled reality.</p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +166,7 @@
                         <div class="mdv-card-content">
                             <h4>Alex</h4>
                             <h6 class="category text-muted">Client Relationship Manager</h6>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, no quo saepe impedit atomorum.</p>
+                            <p class="text-muted">Applying method to the madness, Alex is an essential cog in the Mandeville machine.</p>
                         </div>
                     </div>
                 </div>
