--- a/src/MandevilleCnc.Web/Views/Home/Error.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/Error.cshtml
@@ -1,6 +1,18 @@
 ﻿@{
     ViewData["Title"] = "Error";
+    ViewData["Description"] = "This is the generic server error page that is displayed when something goes wrong with the request.";
+    ViewData["Keywords"] = "CNC Routing, CNC ROuting Services, Joinery, Joinery Services, Dorset Routing, UK Routing, 500";
+    ViewData["CanonicalUrl"] = Url.Action("Error", "Home");
+    ViewData["HideFooter"] = true;
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<section class="mdv-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h1>Oh Dear! :(</h1>
+                <h4>An error occurred processing your request, rest assured we know about it and will deal with it.</h4>
+            </div>
+        </div>
+    </div>
+</section>
