--- a/src/MandevilleCnc.Web/Views/Shared/_ContactForm.cshtml
+++ b/src/MandevilleCnc.Web/Views/Shared/_ContactForm.cshtml
@@ -24,6 +24,6 @@
         <div class="g-recaptcha" data-sitekey="6LfGYx8UAAAAACFWo7tFkAofnpCiaQNEq4vqgVu4"></div>
     </div>
     <div class="col-xs-12">
-        <button type="submit" class="btn btn-raised btn-primary btn-block-xs pull-right">Send Message</button>
+        <button type="submit" class="btn btn-raised btn-primary btn-block-sm pull-right">Send Message</button>
     </div>
 }
