--- a/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
+++ b/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
@@ -5,8 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="@ViewData["Description"]" />
+    <meta name="keywords" content="@ViewData["Keywords"]" />
 
     <title>Mandeville CNC Routing - @ViewData["Title"]</title>
+    <link rel="canonical" href="@ViewData["CanonicalUrl"]">
 
     @* Fonts *@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" type="text/css">
@@ -49,6 +52,11 @@
                                 <i class="material-icons">email</i> Contact
                             </a>
                         </li>
+                        <li class="visible-xs visible-sm">
+                            <a href="tel:+44193583861">
+                                <i class="material-icons">phone</i> Call Us
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -59,20 +67,52 @@
     @RenderBody()
 
     @* Footer *@
-    <footer>
+    @if (!ViewData.ContainsKey("HideFooter") || (ViewData.ContainsKey("HideFooter") && !bool.Parse(ViewData["HideFooter"].ToString())))
+    {
+    <footer itemscope="" itemtype="http://schema.org/LocalBusiness">
         <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="@Url.Action("AboutUs", "Home")">About Us</a></li>
-                    <li><a href="@Url.Action("GetAQuote", "Home")">Get a Quote</a></li>
-                    <li><a href="@Url.Action("Contact", "Home")">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="copyright pull-right">
-                ©<script>document.write(new Date().getFullYear())</script>, Mandeville Joinery Co.
+            <div class="col-sm-6 mdv-footer-address" itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
+                <p>
+                    <span itemprop="streetAddress">Unit 4 Townsend Buildings</span>,<br />
+                    <span itemprop="addressLocality">Melbury Osmond</span>,<br />
+                    <span itemprop="addressRegion">Dorset</span>,<br />
+                    <span itemprop="addressCountry">UK</span>,<br />
+                    <span itemprop="postalCode">DT2 0LP</span>
+                </p>
+                <p>
+                    <strong>
+                        tel: <span itemprop="telephone">+44 (0)1935 83861</span><br />
+                        mob: <span itemprop="telephone">+44 (0)7974 793588</span><br />
+                        email: <a href="mailto:info@mandevillejoinery.com" itemprop="email">info@mandevillejoinery.com</a>
+                    </strong>
+                </p>
+                <p>
+                    Open <time itemprop="openingHours" datetime="Mo,Tu,We,Th,Fr 08:30-17:30">08:30 a.m. to 17:30 p.m. Monday to Friday</time>
+                </p>
+
+                <span itemprop="geo" itemscope="" itemtype="http://schema.org/GeoCoordinates">
+                    <meta itemprop="latitude" content="50.865189">
+                    <meta itemprop="longitude" content="-2.600136">
+                </span>
+            </div>
+
+            <div class="col-sm-6">
+                <nav>
+                    <ul>
+                        <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+                        <li><a href="@Url.Action("AboutUs", "Home")">About Us</a></li>
+                        <li><a href="@Url.Action("GetAQuote", "Home")">Get a Quote</a></li>
+                        <li><a href="@Url.Action("Contact", "Home")">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="col-xs-12">
+                <p class="text-center mdv-copyright">©<script>document.write(new Date().getFullYear())</script>, <span itemprop="name">Mandeville Joinery Co. Ltd.</span></p>
             </div>
         </div>
     </footer>
+    }
 
     @* Modal *@
     <div class="modal">
