moved settings into app settings file with options model.

--- a/src/MandevilleCnc.Web/Views/Home/GetAQuote.cshtml
+++ b/src/MandevilleCnc.Web/Views/Home/GetAQuote.cshtml
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12">
-                            <div class="g-recaptcha mdv-recaptcha" data-sitekey="6LfGYx8UAAAAACFWo7tFkAofnpCiaQNEq4vqgVu4"></div>
+                            <div class="g-recaptcha mdv-recaptcha" data-sitekey="@Options.Value.RecaptchaSiteKey"></div>
                         </div>
                         <div class="col-xs-12">
                             <button type="submit" class="btn btn-raised btn-primary btn-block-sm pull-right">Send Request</button>
