--- a/src/MandevilleCnc.Web/Views/_ViewImports.cshtml
+++ b/src/MandevilleCnc.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using MandevilleCnc.Web
 @using MandevilleCnc.Web.Models
+@using Microsoft.Extensions.Options;
+
+@inject IOptions<MyOptions> Options
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
