--- a/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
+++ b/src/MandevilleCnc.Web/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                                 <i class="material-icons">email</i> Contact
                             </a>
                         </li>
-                        <li class="visible-xs visible-sm">
+                        <li class="visible-xs">
                             <a href="tel:+44193583861">
                                 <i class="material-icons">phone</i> Call Us
                             </a>
