added chug and boots

--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -218,6 +218,32 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="mdv-card">
+                        <div class="mdv-card-avatar">
+                            <img class="img" src="@Url.Content("~/images/aboutus-chuggy.jpg")">
+                        </div>
+
+                        <div class="mdv-card-content">
+                            <h4>Chuggy Pig</h4>
+                            <h6 class="category text-muted">Team Mascot</h6>
+                            <p class="text-muted">Supporting the team and providing back up to Boots when things get ugly.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="mdv-card">
+                        <div class="mdv-card-avatar">
+                            <img class="img" src="@Url.Content("~/images/aboutus-boots.jpg")">
+                        </div>
+
+                        <div class="mdv-card-content">
+                            <h4>Boots</h4>
+                            <h6 class="category text-muted">Team Mascot / Guard Dog</h6>
+                            <p class="text-muted">Keeping the workshop safe from intruders with his side kick Chuggy Pig.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="row">
