updated css to fix page header issues and firefox compatibility.

--- a/src/MandevilleJoinery.Web/Views/Home/Error.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/Error.cshtml
@@ -7,11 +7,13 @@
 }
 
 <section class="mdv-page-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h1>Oh Dear! :(</h1>
-                <h4>An error occurred processing your request, rest assured we know about it and will deal with it.</h4>
+    <div class="mdv-page-header-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1>Oh Dear! :(</h1>
+                    <h4>An error occurred processing your request, rest assured we know about it and will deal with it.</h4>
+                </div>
             </div>
         </div>
     </div>
