--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -6,11 +6,13 @@
 }
 
 <section class="mdv-page-header" style="background-image: url('/images/bg2.jpg')">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h1>About Us.</h1>
-                <h4>Find out a little more about our history, our values and our skilled team of wood enthusiasts.</h4>
+    <div class="mdv-page-header-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1>About Us.</h1>
+                    <h4>Find out a little more about our history, our values and our skilled team of wood enthusiasts.</h4>
+                </div>
             </div>
         </div>
     </div>
