--- a/src/MandevilleJoinery.Web/Views/Home/Contact.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/Contact.cshtml
@@ -6,11 +6,13 @@
 }
 
 <section class="mdv-page-header" style="background-image: url('/images/bg7.jpg')">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h1>Contact.</h1>
-                <h4>You can find all the different ways you can get in touch below. We'd love to hear from you.</h4>
+    <div class="mdv-page-header-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1>Contact.</h1>
+                    <h4>You can find all the different ways you can get in touch below. We'd love to hear from you.</h4>
+                </div>
             </div>
         </div>
     </div>
