--- a/src/MandevilleJoinery.Web/Views/Home/GetAQuote.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/GetAQuote.cshtml
@@ -8,11 +8,13 @@
 }
 
 <section class="mdv-page-header" style="background-image: url('/images/bg5.jpg')">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h1>Get a Quote.</h1>
-                <h4>We commit to providing you with a no obligation quote for your project, no matter how large or small your requirements.</h4>
+    <div class="mdv-page-header-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1>Get a Quote.</h1>
+                    <h4>We commit to providing you with a no obligation quote for your project, no matter how large or small your requirements.</h4>
+                </div>
             </div>
         </div>
     </div>
