--- a/src/MandevilleJoinery.Web/Views/Home/PageNotFound.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/PageNotFound.cshtml
@@ -7,11 +7,13 @@
 }
 
 <section class="mdv-page-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h1>Oh Dear! :(</h1>
-                <h4>The page you're looking for cannot be found.</h4>
+    <div class="mdv-page-header-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1>Oh Dear! :(</h1>
+                    <h4>The page you're looking for cannot be found.</h4>
+                </div>
             </div>
         </div>
     </div>
