--- a/src/MandevilleJoinery.Web/Views/Shared/_Layout.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Shared/_Layout.cshtml
@@ -28,49 +28,7 @@
 </head>
 <body>
     @* Header and nav *@
-    <header>
-        <nav class="navbar navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="@Url.Action("Index", "Home")">Mandeville Joinery</a>
-                </div>
-                <div class="navbar-collapse collapse navbar-inverse-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="@(Context.Request.Path == @Url.Action("AboutUs", "Home") ? "active" : "")">
-                            <a href="@Url.Action("AboutUs", "Home")">
-                                <i class="material-icons">group</i> About Us
-                            </a>
-                        </li>
-                        <li class="@(Context.Request.Path == @Url.Action("Gallery", "Home") ? "active" : "")">
-                            <a href="@Url.Action("Gallery", "Home")">
-                                <i class="material-icons">camera_alt</i> Gallery
-                            </a>
-                        </li>
-                        <li class="@(Context.Request.Path == @Url.Action("GetAQuote", "Home") ? "active" : "")">
-                            <a href="@Url.Action("GetAQuote", "Home")">
-                                <i class="material-icons">assignment</i> Get a Quote
-                            </a>
-                        </li>
-                        <li class="@(Context.Request.Path == @Url.Action("Contact", "Home") ? "active" : "")">
-                            <a href="@Url.Action("Contact", "Home")">
-                                <i class="material-icons">email</i> Contact
-                            </a>
-                        </li>
-                        <li class="visible-xs">
-                            <a href="tel:+44193583861">
-                                <i class="material-icons">phone</i> Call Us
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    @Html.Partial("_Header")
 
     @* Page content *@
     @RenderBody()
@@ -78,73 +36,11 @@
     @* Footer *@
     @if (!ViewData.ContainsKey("HideFooter") || (ViewData.ContainsKey("HideFooter") && !bool.Parse(ViewData["HideFooter"].ToString())))
     {
-        <footer itemscope="" itemtype="http://schema.org/LocalBusiness">
-            <div class="container">
-                <div class="col-sm-6 mdv-footer-address" itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
-                    <p>
-                        <span itemprop="streetAddress">Unit 4 Townsend Buildings</span>,<br />
-                        <span itemprop="addressLocality">Melbury Osmond</span>,<br />
-                        <span itemprop="addressRegion">Dorset</span>,<br />
-                        <span itemprop="addressCountry">UK</span>,<br />
-                        <span itemprop="postalCode">DT2 0LP</span>
-                    </p>
-                    <p>
-                        <strong>
-                            tel: <span itemprop="telephone">+44 (0)1935 83861</span><br />
-                            mob: <span itemprop="telephone">+44 (0)7974 793588</span><br />
-                            email: <a href="mailto:info@mandevillejoinery.com" itemprop="email">info@mandevillejoinery.com</a>
-                        </strong>
-                    </p>
-                    <p>
-                        Open <time itemprop="openingHours" datetime="Mo,Tu,We,Th,Fr 08:30-17:30">08:30 a.m. to 17:30 p.m. Monday to Friday</time>
-                    </p>
-
-                    <span itemprop="geo" itemscope="" itemtype="http://schema.org/GeoCoordinates">
-                        <meta itemprop="latitude" content="50.865189">
-                        <meta itemprop="longitude" content="-2.600136">
-                    </span>
-                </div>
-
-                <div class="col-sm-6">
-                    <nav>
-                        <ul>
-                            <li><a href="@Url.Action("Index", "Home")">Home</a></li>
-                            <li><a href="@Url.Action("AboutUs", "Home")">About Us</a></li>
-                            <li><a href="@Url.Action("Gallery", "Home")">Gallery</a></li>
-                            <li><a href="@Url.Action("GetAQuote", "Home")">Get a Quote</a></li>
-                            <li><a href="@Url.Action("Contact", "Home")">Contact</a></li>
-                        </ul>
-                    </nav>
-                    <a href="http://www.fsb.org.uk" target="_blank" class="mdv-footer-fsb-link">
-                        <img src="@Url.Content("~/images/fsblogo.png")" />
-                    </a>
-                </div>
-
-                <div class="col-xs-12">
-                    <p class="text-center mdv-copyright">©
-                    <script>document.write(new Date().getFullYear())</script>, <span itemprop="name">Mandeville Joinery Co. Ltd.</span></p>
-                </div>
-            </div>
-        </footer>
+        Html.RenderPartial("_Footer");
     }
 
     @* Modal *@
-    <div class="modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">Modal title</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Modal Body</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-raised btn-primary btn-block-xs" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    @Html.Partial("_Modal")
 
     @* Scripts *@
     <script src="https://www.google.com/recaptcha/api.js"></script>
